--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -10,7 +10,7 @@
 
 <div class="content-space-1">
 <div class="col-sm text-center text-sm-start">
-    <a class="link" href="{% url 'project_list' %}">
+    <a class="link" href="{% url 'projects:project_list' %}">
       <i class="bi-chevron-left small ms-1"></i> Back to Projects
     </a>
   </div>
