--- a/projects/templates/projects/project_detail.html
+++ b/projects/templates/projects/project_detail.html
@@ -5,7 +5,7 @@
     <h1>{{ project.name }}</h1>
 
     <p>{{ project.description }}</p>
-    <a href="{% url 'task_list' project.id %}">View Tasks</a> |
-    <a href="{% url 'project_edit' project.pk %}">Edit Project</a>
+    <a href="{% url 'projects:task_list' project.id %}">View Tasks</a> |
+    <a href="{% url 'projects:project_edit' project.pk %}">Edit Project</a>
 
 {% endblock %}
